# osmo-trx

./: configure.ac
Transceiver52M/: Makefile.am  Transceiver.cpp
Transceiver52M/device/: Makefile.am
Transceiver52M/device/pciesdr/: Makefile.am  PCIESDRDevice.cpp  PCIESDRDevice.h
doc/examples/osmo-trx-pciesdr/: osmo-trx-pciesdr.cfg
